Fix textarea wrapping, increase maxlength to 1000, implement copy to clipboard for linked bins

--- a/src/App.css
+++ b/src/App.css
@@ -12,7 +12,7 @@ textarea {
   outline: none;
   width: 75vw;
   resize: none;
-  white-space: pre;
+  white-space: pre-wrap;
   padding: 1rem;
   font-size: inherit;
   border-radius: 5px;
